fix input autofill on selected in dark and override use stylesheet for best UI in dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -55,9 +55,14 @@ body {
     --sidebar-accent-foreground: 240 5.9% 10%;
     --sidebar-border: 220 13% 91%;
     --sidebar-ring: 217.2 91.2% 59.8%;
-
-    
   }
+
+  input:-webkit-autofill {
+    box-shadow: 0 0 0px 1000px #ffffff inset !important;
+    -webkit-text-fill-color: #111 !important; 
+  }
+  
+
   ::-webkit-scrollbar {
     width: 8px;
     height: 8px;
@@ -107,20 +112,24 @@ body {
   ::-webkit-scrollbar {
     width: 8px;
   }
-  
+
   ::-webkit-scrollbar-track {
     background: #222;
   }
-  
+
   ::-webkit-scrollbar-thumb {
     background: #444;
     border-radius: 6px;
   }
-  
+
   ::-webkit-scrollbar-thumb:hover {
     background: #666;
   }
-  
+
+  & input:-webkit-autofill {
+    box-shadow: 0 0 0px 1000px #292929 inset !important; 
+    -webkit-text-fill-color: #eee !important;
+  }
 }
 
 .mySwiper .swiper-pagination-fraction,
@@ -139,4 +148,3 @@ body {
   background: hsl(var(--neutral-50));
   opacity: 80%;
 }
-
